--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,14 +19,12 @@ httpx==0.27.2
 # LLM
 groq==0.11.0
 
-# Twilio
-twilio==9.3.5
-
 # Google APIs
 google-auth==2.34.0
 google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
 google-api-python-client==2.149.0
+email-validator
 
 # Notion API
 notion-client==2.2.1
